[package]
name = "circe"
version = "0.1.0"
edition = "2018"
resolver = "2"

[dependencies]
nftnl = { path = "nftnl/nftnl", features = [ "query" ] }
lazy_static = "1.4.0"
thiserror = "1.0"
mnl = { path = "mnl/mnl", features = ["mnl-1-0-4"] }
libc = "0.2"
tracing = "0.1"
tracing-subscriber = "0.2"
toml = "0.5.8"
