[package]
name = "circe"
version = "0.1.0"
edition = "2018"
resolver = "2"

[dependencies]
rustables = { path = "rustables/rustables", features = [ "query" ] }
lazy_static = "1.4.0"
thiserror = "1.0"
mnl = "0.2"
libc = "0.2"
tracing = "0.1"
tracing-subscriber = "0.2"
toml = "0.5.8"
serde = "1.0"
serde_derive = "1.0"
ipnetwork = "0.18"
