[package]
name = "circe_launcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
ureq = { version = "2.3", default-features = false, features = [] }
circe_common = { path = "../circe_common" }
qapi = { version = "0.8.0", features = [ "qmp" ] }
