[package]
name = "circed"
version = "0.1.0"
edition = "2018"

[dependencies]
rustables = { path = "../deps/rustables", features = [ "query" ] }
nasty_network_ioctls = { path = "../deps/nasty_network_ioctls" }
lazy_static = "1.4.0"
thiserror = "1.0"
libc = "0.2"
tracing = "0.1"
tracing-subscriber = "0.2"
toml = "0.5.8"
serde = "1.0"
serde_derive = "1.0"
ipnetwork = "0.18"
nix = "0.23"
circe_common = { path = "../circe_common" }
tokio = { version = "1", features = ["full"] }
warp = "0.3"
