[package]
name = "circed"
version = "0.1.0"
edition = "2018"

[dependencies]
rustables = { path = "../deps/rustables", features = [ "query" ] }
nasty_network_ioctls = { path = "../deps/nasty_network_ioctls" }
once_cell = "1.9.0"
thiserror = "1.0"
libc = "0.2"
tracing = "0.1"
tracing-subscriber = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
ipnetwork = "0.18"
nix = "0.23"
circe_common = { path = "../circe_common", features = ["toml_support"] }
tokio = { version = "1", features = ["net", "rt-multi-thread", "fs", "io-util", "macros"] }
tokio-util = { version = "0.6", features = ["io"] }
sha2 = "0.10"
